11-argo/argo-events/install/source-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-eventsource-ingress
  namespace: argo-events 
spec:
  ingressClassName: nginx
  rules:
  - host: eventsource.threshold.com
    http:
      paths:
      - backend:
          service:
            name: webhook-eventsource-svc
            port:
              number: 12000
        path: /
        pathType: Prefix
